# agentic_financial_planner

./: README.md  pyproject.toml  user_info.xlsx
output/: emergency_fund_advice.md  financial_plan_report.md  insurance_advice.md  investment_advice.md  summarized_user_data.md
src/agentic_financial_planner/: crew.py  main.py
src/agentic_financial_planner/config/: agents.yaml  tasks.yaml
