[project]
name = "agentic_financial_planner"
version = "0.1.0"
description = "agentic-financial-planner using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
agentic_financial_planner = "agentic_financial_planner.main:run"
run_crew = "agentic_financial_planner.main:run"
train = "agentic_financial_planner.main:train"
replay = "agentic_financial_planner.main:replay"
test = "agentic_financial_planner.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
